--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,18 @@
     "doc": "docs",
     "test": "test"
   },
-  "scripts": {},
+  "scripts": {
+    "dev": "nodemon src/app.js"
+  },
   "keywords": [],
   "author": "Miguel Amézquita, Cristian Gómez",
   "license": "MIT",
   "dependencies": {
+    "cookie": "^0.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   }
 }
