--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,14 @@
   "author": "Miguel Amézquita, Cristian Gómez",
   "license": "MIT",
   "dependencies": {
-    "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
