--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+        
+      - name: Change directory
+        run: cd ./cliente
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
